apps/generic/overlays/tesla-public-key/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tesla-public-key
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
