apps/generic/overlays/tesla-public-key/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tesla-public-key
